# Isaac_Sim

./: .gitignore  README.md  isaac_sim.yaml
husky_controller/: main.py  test.py
husky_controller/data/: Circle.txt  Eight.txt  ISAAC_CYLINDER.txt  ISAAC_SPHERE.txt  Square.txt  VelCommand(cylinder).txt  VelCommand(sphere).txt  VelCommand.txt
husky_controller/math_type_define/: dyros_math.py
husky_controller/model/: husky(sphere).urdf  husky(two_wheel).urdf  husky(two_wheel_sphere).urdf  husky.urdf
husky_controller/trajectory/: circle.txt  convolution_planning.m  eight.txt  square.txt
husky_controller/wheelcontroller/: controller.py  differential.py
panda_controller/: gripper_control.py  main.py  test.py  test.txt
panda_controller/armcontroller/: controller.py  sensor.py
panda_controller/data/: Circle.txt  Eight.txt  Square.txt  b=1024.txt  traj_plot.m
panda_controller/data/plot/: b=1024.txt  b=50000.txt  traj_plot.asv  traj_plot.m  (+1 more)
panda_controller/ik/: CMakeLists.txt  IK_solver.py  NJSDF.cpp  NJSDF_.cpp
panda_controller/ik/NNmodel/: sdf_256x5_mesh.pt  sdf_256x5_mesh_50000_drop_0.100000.pt  sdf_256x5_mesh_50000_drop_0.500000.pt  sdf_256x5_mesh_50000_drop_0.800000.pt
panda_controller/ik/sdf/: robot_sdf.py
panda_controller/model/: panda_arm_hand.urdf  panda_arm_hand_rev.usd  panda_arm_hand_wo_gripper.urdf  panda_robot_description.yaml  panda_w_realsense.usd
panda_controller/mpc/: MPC_solver.py  NJSDF.cpp
panda_controller/panda_visualize/: CMakeLists.txt  package.xml
panda_controller/trajectory/: ForwadKinematics.py  TrajectoryPlanner.py
(+15 files in other folders)
